--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
 
       
           <div id="avatar-picker-box" class="hidden">
-            <a href="#"><div id="div-wrapper" class="wrapper wrapper-icon-box1"><div id="div-content" class="icon-bg"></div></div></a>
-            <a href="#"><div id="div-wrapper" class="wrapper wrapper-icon-box2"><div id="div-content" class="icon-bg"></div></div></a>
-            <a href="#"><div id="div-wrapper" class="wrapper wrapper-icon-box3"><div id="div-content" class="icon-bg"></div></div></a>
-            <a href="#"><div id="div-wrapper" class="wrapper wrapper-icon-box4"><div id="div-content" class="icon-bg"></div></div></a>
-            <a href="#"><div id="div-wrapper" class="wrapper wrapper-icon-box5"><div id="div-content" class="icon-bg"></div></div></a>
-            <a href="#"><div id="div-wrapper" class="wrapper wrapper-icon-box6"><div id="div-content" class="icon-bg"></div></div></a>
+            <a href="#"><div  class="wrapper-icon-box-selected wrapper-icon-box1"><div id="div-content" class="icon-bg"></div></div></a>
+            <a href="#"><div  class="wrapper wrapper-icon-box2"><div id="div-content" class="icon-bg"></div></div></a>
+            <a href="#"><div class="wrapper wrapper-icon-box3"><div id="div-content" class="icon-bg"></div></div></a>
+            <a href="#"><div class="wrapper wrapper-icon-box4"><div id="div-content" class="icon-bg"></div></div></a>
+            <a href="#"><div class="wrapper wrapper-icon-box5"><div id="div-content" class="icon-bg"></div></div></a>
+            <a href="#"><div class="wrapper wrapper-icon-box6"><div id="div-content" class="icon-bg"></div></div></a>
           </div>
       
   </body>   
